@@ -30,6 +30,7 @@ The following bugs are resolved with this release:
     missing libraries
   [28896] strncmp-avx2-rtm and wcsncmp-avx2-rtm fallback on non-rtm
     variants when avoiding overflow
+  [28937] New DSO dependency sorter does not put new map first if in a cycle
   [28953] nss: Protect against errno changes in function lookup
   [29029] nptl: poll() spuriously returns EINTR during thread
     cancellation and with cancellation disabled
